--- a/.config/strawberry/strawberry.conf
+++ b/.config/strawberry/strawberry.conf
@@ -86,7 +86,7 @@ group_by2=4
 group_by3=0
 group_by_version=1
 io_priority=3
-last_path=/mnt/seedbox/music
+last_path=/mnt/content/music
 mark_songs_unavailable=true
 monitor=true
 overwrite_rating=false
@@ -123,6 +123,10 @@ splitter_state=@ByteArray(\0\0\0\xff\0\0\0\x1\0\0\0\x2\0\0\0\xc8\0\0\x2\xbf\x1\x
 
 [Covers]
 providers=Last.fm, MusicBrainz, Deezer, Musixmatch, Spotify, Tidal, Qobuz
+
+[EditTagDialog]
+current_tab=1
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x5\xc2\0\0\x2\x80\0\0\te\0\0\x6\x12\0\0\x5\xc7\0\0\x2\x85\0\0\t`\0\0\x6\r\0\0\0\0\0\0\0\0\xf\0\0\0\x5\xc7\0\0\x2\x85\0\0\t`\0\0\x6\r)
 
 [Equalizer]
 enable_stereo_balancer=false
@@ -211,7 +215,7 @@ providers=AudD, Genius, Lyrics.ovh, LoloLyrics, Musixmatch
 [MainWindow]
 current_tab=1
 file_path=/home/wunder
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x32\0\0\0\n\0\0\xe\xf5\0\0\be\0\0\0\x35\0\0\0\r\0\0\xe\xf2\0\0\bb\0\0\0\0\0\0\0\0\xf\0\0\0\0\x35\0\0\0\r\0\0\xe\xf2\0\0\bb)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\0\x32\0\0\0\n\0\0\xe\xf5\0\0\be\0\0\0\x37\0\0\0\xf\0\0\xe\xf0\0\0\b`\0\0\0\0\0\0\0\0\xf\0\0\0\0\x37\0\0\0\xf\0\0\xe\xf0\0\0\b`)
 hidden=false
 maximized=false
 minimized=false
@@ -266,10 +270,23 @@ foreground_color=4278190080
 popup_pos=@Point(2628 0)
 popup_screen=DisplayPort-0
 
+[OrganizeDialog]
+albumcover=true
+allow_ascii_ext=false
+destination=/mnt/content/music
+eject_after=false
+format=%albumartist/%album{ (Disc %disc)}/{%track - } %title.%extension
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x5\xa7\0\0\x1\xef\0\0\t\x80\0\0\x6\x81\0\0\x5\xac\0\0\x2\x17\0\0\t{\0\0\x6|\0\0\0\0\0\0\0\0\xf\0\0\0\x5\xac\0\0\x2\x17\0\0\t{\0\0\x6|)
+overwrite=false
+remove_non_ascii=false
+remove_non_fat=false
+remove_problematic=true
+replace_spaces=true
+
 [Player]
 playback_playlist=1
-playback_position=61
-playback_state=3
+playback_position=105
+playback_state=2
 volume=100
 
 [PlayingWidget]
@@ -290,7 +307,7 @@ playlist_clear=true
 rating_locked=false
 select_track=false
 show_toolbar=true
-state="@ByteArray(P,\x95\xf\x1\0\0\0\x1e\0\0\x2N\0\0\x2\xb6\0\0\x2\t\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0^\0\0\0\0\0\0\0j\0\0\0\0\0\0\0\xf7\0\0\0\xf6\0\0\0\xf4\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\xcd\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1;\0\0\0\0\0\0\0\0\0\0\0\x1e\0\0\0\b\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\a\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\xf\0\0\0\x10\0\0\0\x11\0\0\0\x12\0\0\0\x13\0\0\0\x14\0\0\0\x15\0\0\0\x16\0\0\0\x17\0\0\0\x18\0\0\0\x19\0\0\0\x1a\0\0\0\x1b\0\0\0\x1c\0\0\0\x1d\0\0\0\x1e?\xc7!\xef\x65\xdc\x9d\xf0?\xcb\x33\xa2X\xa7\xa5s?\xc4l\x95\xca\xd7J\x89\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0?\x9d\xaeO\x83{\xc9\xf6\0\0\0\0\0\0\0\0?\xa0\xbe\x44\x1c\x34\x97`\0\0\0\0\0\0\0\0?\xb3j\xa0}\a\xaa\x16?\xb3JY\xca\xfb\xcf\x1b?\xb3'\xa5,\x91xL\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0?\xb0\x1e\xc3\x94\x90\xab{\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0?\xb8\xb5\x97\xf5*\t\v\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0)"
+state="@ByteArray(P,\x95\xf\x1\0\0\0\x1e\0\0\x2M\0\0\x2\xb5\0\0\x2\b\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0^\0\0\0\0\0\0\0j\0\0\0\0\0\0\0\xf7\0\0\0\xf5\0\0\0\xf4\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\xcd\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\x1;\0\0\0\0\0\0\0\0\0\0\0\x1e\0\0\0\b\0\0\0\0\0\0\0\x1\0\0\0\x2\0\0\0\x3\0\0\0\x4\0\0\0\x5\0\0\0\x6\0\0\0\a\0\0\0\t\0\0\0\n\0\0\0\v\0\0\0\f\0\0\0\r\0\0\0\xe\0\0\0\xf\0\0\0\x10\0\0\0\x11\0\0\0\x12\0\0\0\x13\0\0\0\x14\0\0\0\x15\0\0\0\x16\0\0\0\x17\0\0\0\x18\0\0\0\x19\0\0\0\x1a\0\0\0\x1b\0\0\0\x1c\0\0\0\x1d\0\0\0\x1e?\xc7!\xef\x65\xdc\x9d\xf0?\xcb\x33\xa2X\xa7\xa5s?\xc4l\x95\xca\xd7J\x89\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0?\x9d\xaeO\x83{\xc9\xf6\0\0\0\0\0\0\0\0?\xa0\xbe\x44\x1c\x34\x97`\0\0\0\0\0\0\0\0?\xb3j\xa0}\a\xaa\x16?\xb3JY\xca\xfb\xcf\x1b?\xb3'\xa5,\x91xL\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0?\xb0\x1e\xc3\x94\x90\xab{\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0?\xb8\xb5\x97\xf5*\t\v\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\b)"
 state_version=1
 warn_close_playlist=true
 write_metadata=false
@@ -359,7 +376,7 @@ songs\size=10
 songs_version=3
 
 [SettingsDialog]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x5\xf4\0\0\x2\xa4\0\0\t4\0\0\x5\xcc\0\0\x5\xf7\0\0\x2\xca\0\0\t1\0\0\x5\xc9\0\0\0\0\0\0\0\0\xf\0\0\0\x5\xf7\0\0\x2\xca\0\0\t1\0\0\x5\xc9)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x5\xf2\0\0\x2\xa2\0\0\t6\0\0\x5\xce\0\0\x5\xf7\0\0\x2\xca\0\0\t1\0\0\x5\xc9\0\0\0\0\0\0\0\0\xf\0\0\0\x5\xf7\0\0\x2\xca\0\0\t1\0\0\x5\xc9)
 
 [Subsonic]
 group_by1=1
