--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -1,10 +1,10 @@
 [General]
 disabledTrayIcon=false
-drawColor=#ff0000
+drawColor=#800000
 drawFontSize=7
 drawThickness=12
 ignoreUpdateToVersion=11.0.0
-savePath=/home/wunder/Desktop
+savePath=/home/wundor
 savePathFixed=false
 showStartupLaunchMessage=true
 
