--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -1,10 +1,10 @@
 [General]
 disabledTrayIcon=false
 drawColor=#800000
-drawFontSize=7
+drawFontSize=47
 drawThickness=12
 ignoreUpdateToVersion=11.0.0
-savePath=/home/wundor
+savePath=/home/wunder
 savePathFixed=false
 showStartupLaunchMessage=true
 
