--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -17,8 +17,8 @@
 # Fading
 
 fading = true;
-fade-in-step = 0.03;
-fade-out-step = 0.03;
+fade-in-step = 0.01;
+fade-out-step = 0.01;
 fade-delta = 3;
 
 no-fading-destroyed-argb = true;
@@ -40,7 +40,7 @@ fade-exclude = [
 
 blur-kern = "11x11gaussian";
 blur-method = "dual_kawase";
-blur-strength = 8.0;
+blur-strength = 18.0;
 blur-background = true;
 blur-background-frame = true;
 blur-background-fixed = true;
@@ -69,14 +69,8 @@ xrender-sync-fence = true;
 glx-use-copysubbuffer-mesa = false;
 transparent-clipping = false;
 
-wintypes = {
-    normal = { full-shadow = true; };
-    popup_menu = { full-shadow = true; };
-    notification = { full-shadow = true; };
-    dropdown_menu = { full-shadow = true; };
-};
-
 opacity-rule = [
-  "50:class_g = 'scratchkitty'",
+  "10:class_g = 'scratchkitty'",
   "50:class_g = 'alacritty'",
+  "50:class_g = 'emacs'"
 ];
