--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,26 +3,48 @@ open_url_with firefox
 font_size 14
 font_family PragmataPro Mono Liga
 
-background_opacity 0.8
+background_opacity 0.9
 
-background #1e1f28
-foreground #f8f8f2
-cursor #bbbbbb
-selection_background #44475a
-color0 #000000
-color8 #545454
-color1 #ff5555
-color9 #ff5454
-color2 #50fa7b
-color10 #50fa7b
-color3 #f0fa8b
-color11 #f0fa8b
-color4 #bd92f8
-color12 #bd92f8
-color5 #ff78c5
-color13 #ff78c5
-color6 #8ae9fc
-color14 #8ae9fc
-color7 #bbbbbb
-color15 #ffffff
-selection_foreground #1e1f28
+# Nord Colorscheme for Kitty
+# Based on:
+# - https://gist.github.com/marcusramberg/64010234c95a93d953e8c79fdaf94192
+# - https://github.com/arcticicestudio/nord-hyper
+
+foreground            #D8DEE9
+background            #2E3440
+selection_foreground  #000000
+selection_background  #FFFACD
+url_color             #0087BD
+cursor                #81A1C1
+
+# black
+color0   #3B4252
+color8   #4C566A
+
+# red
+color1   #BF616A
+color9   #BF616A
+
+# green
+color2   #A3BE8C
+color10  #A3BE8C
+
+# yellow
+color3   #EBCB8B
+color11  #EBCB8B
+
+# blue
+color4  #81A1C1
+color12 #81A1C1
+
+# magenta
+color5   #B48EAD
+color13  #B48EAD
+
+# cyan
+color6   #88C0D0
+color14  #8FBCBB
+
+# white
+color7   #E5E9F0
+color15  #ECEFF4
