--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -93,7 +93,7 @@ set preview_images true
 # * urxvt-full:
 #   The same as urxvt but utilizing not only the preview pane but the
 #   whole terminal window.
-set preview_images_method kitty
+set preview_images_method w3m
 
 # Default iTerm2 font size (see: preview_images_method: iterm2)
 set iterm2_font_width 8
@@ -665,3 +665,4 @@ tmap <ESC> taskview_close
 copytmap <ESC> q Q w <C-c>
 
 map <A-f> fzf_select
+default_linemode devicons
