--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule ".config/awesome/lib/awesome-wm-widgets"]
   path = .config/awesome/lib/awesome-wm-widgets
   url = https://github.com/streetturtle/awesome-wm-widgets.git
+[submodule ".config/ranger/plugins/ranger_devicons"]
+	path = .config/ranger/plugins/ranger_devicons
+	url = https://github.com/alexanderjeurissen/ranger_devicons
