--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -19,5 +19,7 @@ settings:
     global: lightness-cielab
   colors.webpage.darkmode.enabled:
     global: true
+  content.notifications.enabled:
+    https://www.reddit.com: false
   scrolling.smooth:
     global: true
