--- a/.config/flameshot/flameshot.ini
+++ b/.config/flameshot/flameshot.ini
@@ -4,7 +4,7 @@ drawColor=#800000
 drawFontSize=47
 drawThickness=12
 ignoreUpdateToVersion=11.0.0
-savePath=/home/wunder
+savePath=/home/wundor
 savePathFixed=false
 showStartupLaunchMessage=true
 
