--- a/.config/strawberry/strawberry.conf
+++ b/.config/strawberry/strawberry.conf
@@ -126,7 +126,7 @@ providers=Last.fm, MusicBrainz, Deezer, Musixmatch, Spotify, Tidal, Qobuz
 
 [EditTagDialog]
 current_tab=1
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x5\xc2\0\0\x2\x80\0\0\te\0\0\x6\x12\0\0\x5\xc7\0\0\x2\x85\0\0\t`\0\0\x6\r\0\0\0\0\0\0\0\0\xf\0\0\0\x5\xc7\0\0\x2\x85\0\0\t`\0\0\x6\r)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\x5\xc2\0\0\x2]\0\0\te\0\0\x6\x12\0\0\x5\xc7\0\0\x2\x85\0\0\t`\0\0\x6\r\0\0\0\0\0\0\0\0\xf\0\0\0\x5\xc7\0\0\x2\x85\0\0\t`\0\0\x6\r)
 
 [Equalizer]
 enable_stereo_balancer=false
@@ -285,7 +285,7 @@ replace_spaces=true
 
 [Player]
 playback_playlist=1
-playback_position=105
+playback_position=19
 playback_state=2
 volume=100
 
