--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,6 +28,8 @@ bind F2 copy-mode
 bind v paste-buffer
 bind m resize-pane -Z
 
+bind a clear-history
+
 bind-key -n C-Pagedown next-window
 bind-key -n C-Pageup previous-window
 bind j next-window
